try to fix dark mode

--- a/src/sass/components/_trending.scss
+++ b/src/sass/components/_trending.scss
@@ -105,5 +105,5 @@
 
 .darkmode--activated .movie__vote {
   color: $text-color-white;
-  background-color: #0094f7;
+  background-color: $hover-orange;
 }
